# KeCommon

./: .clang-format  .project  CMakeLists.txt  Dockerfile  build.bat
Bootloader/: Bootloader.cpp
Bsw/: CMakeLists.txt
Bsw/Bootloader/: Bootloader.c  Bootloader.cpp  Bootloader.h
Bsw/Calibration/: Calibration.cpp  Calibration.h  CalibrationCommand.h  CalibrationTask.cpp  CalibrationTask.h  CanTp.cpp  CanTp.h  CommandId.h  IDoxTp.h  SId.h
Bsw/Communication/: CMakeLists.txt  ICom.h
Bsw/Communication/CAN/: CanFrame.h  ICan.h
Bsw/Communication/CAN/FlexCan/: FlexCan.cpp  FlexCan.h
Bsw/Communication/SPI/: ISpi.h
Bsw/Communication/SPI/LpSpi/: LpSpi.cpp  LpSpi.h
Bsw/Communication/UART/: IUart.h
Bsw/Communication/UART/LpUartDma/: LpUartDma.cpp  LpUartDma.h
Bsw/DeviceDrivers/: CMakeLists.txt  ICom.h
Bsw/DeviceDrivers/CAN/: CanFrame.h  ICan.h  ICanFrame.h
Bsw/DeviceDrivers/CAN/FlexCan/: FlexCan.cpp  FlexCan.h
Bsw/DeviceDrivers/FlexCan/: FlexCan.cpp  FlexCan.h
Bsw/DeviceDrivers/LpUart/: LpUart.h
Bsw/DeviceDrivers/SPI/: ISpi.h
Bsw/DeviceDrivers/SPI/LpSpi/: LpSpi.cpp  LpSpi.h
Bsw/DeviceDrivers/Tle9104/: Tle9104.cpp  Tle9104.h
Bsw/DeviceDrivers/Tle9461/: Tle9461.cpp  Tle9461.h
Bsw/DeviceDrivers/Tle9xxx/: Tle9xxx.cpp  Tle9xxx.h
Bsw/DeviceDrivers/UART/: IUart.h
Bsw/DeviceDrivers/UART/LpUart/: LpUart.cpp  LpUart.h
Bsw/Diag/: CMakeLists.txt  CanTp.cpp  CanTp.h  IDoXTp.h  SId.h  Uds.cpp  Uds.h  UdsErrorCode.h
Bsw/Interfaces/: IApplication.h  ICalTp.h  ICan.h  ICanFrame.h  ICom.h  IQueue.h  MyQueue.h  Queue.cpp  Queue.h
Bsw/Utils/: CMakeLists.txt
Bsw/Utils/Calibration/: Calibration.cpp  Calibration.h
Bsw/Utils/MapLookup/: Custom1DMap.h  Custom2DMap.h
Bsw/Utils/PidController/: CMakeLists.txt  PidController.cpp  PidController.h
DeviceDrivers/FlexCan/: FlexCan.cpp  FlexCan.h
DeviceDrivers/LpSpi/: LpSpi.cpp  LpSpi.h
DeviceDrivers/LpUart/: LpUart.cpp  LpUart.h
DeviceDrivers/Tle9461/: Tle9461.cpp  Tle9461.h  Tle9461_Regs.h
DeviceDrivers/flexcan/: flexcan.cpp  flexcan.h
DeviceDrivers/lpspi/: lpspi.cpp  lpspi.h
DeviceDrivers/tle9461/: tle9461.cpp  tle9461.h
Interfaces/: ICan.h  ICom.h  ISpi.h  IUart.h
Linker/: Ke16F256.ld  Ke16F256_library.ld  Ke16F256_memory.ld
Utils/Calibration/: Calibration.cpp  Calibration.h
Utils/MapLookup/: Custom1DMap.cpp  Custom2DMap.cpp  IMap.h
drivers/: CMakeLists.txt
nxp/device/: fsl_device_registers.h
nxp/drivers/: CMakeLists.txt  fsl_clock.c  fsl_clock.h  fsl_edma.h  fsl_flexcan_edma.c  fsl_flexcan_edma.h  fsl_ftfx_controller.h  fsl_ftfx_features.h  fsl_ftfx_flash.h  fsl_ftfx_flexnvm.h  fsl_lpspi.h
nxp/freertos/: CMakeLists.txt
nxp/linker/: Ke16F256.ld  MKE18F16.ld  MKE18F16_library.ld  MKE18F16_memory.ld
nxp/source/: FreeRTOSConfig.h
nxp/startup/: startup_mke16f16.cpp
source/: FreeRTOSConfig.h
